Add quiz implementation first iteration
