# api/models/index.ts
@@ -1,6 +1,7 @@
 /**
  * Created by Voislav on 7/16/2016.
  */
-require('./questionBank');
-require('./question');
-require('./quiz');
+
+export {QuizSchema, Quiz, QuizModel} from './quiz';
+export {questionBankSchema, QuestionBank, QuestionBankModel} from './questionBank';
+export {QuestionSchema, Question, Answer, QuestionModel} from './question';
